# SwosuCsPythonExamples

./: .gitignore  .gitmodules  CT Chapter 10 copy  CT Chapter 13  CT chapter 13 second time  CT_ Chapter 10  Chris Trufant Chapter 6  Chris Trufant chapter 7  Codex FolderSummary.md  Codex_FolderSummary.md  GitHubSshNotes.md  README.md  codex_repo_summary.md  codex_sandbox_demo.py  codex_teaching_notes.md  coin_flip_monte_carlo.ipynb  json_file_from_dictionary_example.py  obsidian_quick_start_plus_cli.md  weekly_labs_showcase.py
.claude/: settings.local.json
Briggs/: Better_Math_Quiz.py  Getting_Started.py  Guessing_game.py  Math_Quiz.py
CS1/Student_Codes/Justin_Wiederkehr/Chapter-9/Ch9-UnitTesting/: CMakeLists.txt  functions.h  testSuite.cpp
CS1_CS2/: main.py
CS2/: CYOAG_fishing.py  simple_fishing.py
CYOAG/: README.md
CYOAG_folder/: Ert_Snake_Game.py  README.md
Coin_Tossing/: GPT_coin_flip_sequence_plots_with_ding.py  Pandas_coin_tossing.py  README.md  coin_toss_batch_results.csv  main.py
Data_visualization/: 2025_sp_cs1.txt  AI data.py  matplotlib_example.py
Discrete_Structures/: Student Work-Kaleb Nowakowski
FireDawgs/: Sensor_Verify.py  VALVE.py  start_spray.py
Git_Learning_and_Practice/: 2025_11_03_CS1.md  2025_11_07_cs1.md  git_learning_links.md
Git_Practice/: CS2_Git_Practice.md
LaTeX_template/: main.tex
Monte_Carlo_Assignments/: Untitled.ipynb
Monty_Hall/: Makefile  README.md  data_collector.py  monty_hall_fsm.dot  monty_hall_fsm.fdb_latexmk  monty_hall_fsm.fls  monty_hall_fsm.tex  monty_hall_game.py  monty_hall_project.bbl  player.py  (+6 more)
(+1824 files in other folders)
